[package]
name = "m3u8-flash-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
m3u8-flash-core ={ path = "../core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures-util = "0.3"

[[bin]]
name = "m3u8-flash-engine"
path = "src/main.rs"